[workspace]
members = [
    "benchmark",
    "esdm-sys",
    "esdm-tool",
    "rand-esdm",
]
default-members = ["esdm-tool"]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["Markus Theil <theil.markus@gmail.com>"]
edition = "2024"

[workspace.dependencies]
esdm-sys = { path = "esdm-sys", version = "0.2.1" }
rand-esdm = { path = "rand-esdm", version = "0.2.1" }

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }
cargo-common-metadata = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
missing_safety_doc = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
