[package]
name = "esdm-benchmark"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
edition = "2021"
description = "benchmarks ESDM"
keywords = ["rand", "random", "esdm", "rng", "cli"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true
readme = false

[features]
default = []

[dependencies]
hex = "0.4"
rand_core = { version = "0.9.3", features = ["std"] }
rand-esdm = { workspace = true }
cute = "0.3.0"
rand_chacha = {version = "0.9.0", features = ["os_rng"]}

[lints]
workspace = true
