[package]
name = "esdm-benchmark"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
edition.workspace = true
description = "benchmarks ESDM"
keywords = ["rand", "random", "esdm", "rng", "cli"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true
readme = false

[features]
default = []

[dependencies]
cute = "0.3.0"
hex = "0.4"
rand_chacha = {version = "0.9.0", features = ["os_rng"]}
rand_core = { version = "0.9.3", features = ["std"] }
rand-esdm = { workspace = true }
rand_xoshiro = "0.7.0"

[lints]
workspace = true
