[package]
name = "esdm-benchmark"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
edition.workspace = true
description = "benchmarks ESDM"
keywords = ["rand", "random", "esdm", "rng", "cli"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true
readme = false

[features]
default = []

[dependencies]
cute = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = [ "chacha", "sys_rng" ] }
rand_core = { workspace = true }
rand-esdm = { workspace = true }
rand_xoshiro = { workspace = true }

[lints]
workspace = true
