[package]
name = "esdm-sys"
edition = "2021"
authors = ["Markus Theil <theil.markus@gmail.com>"]
license = "MIT"
version = "0.1.0"
repository = "https://github.com/thillux/rand-esdm"
description = "provides interface to ESDM RNG server (ffi-bindings)"
keywords = ["rand", "random", "esdm", "rng"]
categories = ["external-ffi-bindings"]

[build-dependencies]
pkg-config = "0.3.30"

[build-dependencies.bindgen]
features = ["runtime"]
version = "0.69.4"
