[package]
name = "esdm-sys"
edition.workspace = true
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
description = "provides interface to ESDM RNG server (ffi-bindings)"
keywords = ["rand", "random", "esdm", "rng"]
categories = ["external-ffi-bindings"]
version.workspace = true
authors.workspace = true

[build-dependencies]
pkg-config = { workspace = true }
bindgen = { workspace = true, features = ["runtime"] }

[lints]
workspace = true
