[package]
name = "esdm-tool"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
edition = "2021"
description = "provides small tool to query and use ESDM"
keywords = ["rand", "random", "esdm", "rng", "cli"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true
readme = false

[features]
default = []

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4"
rand_core = "0.9.3"
rand-esdm = { workspace = true }

[lints]
workspace = true
