[package]
name = "esdm-tool"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
edition.workspace = true
description = "provides small tool to query and use ESDM"
keywords = ["rand", "random", "esdm", "rng", "cli"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true
readme = false

[features]
default = []

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
cute = { workspace = true }
rand-esdm = { workspace = true }
getrandom = { workspace = true }

[lints]
workspace = true
