[package]
name = "rand-esdm"
edition = "2021"
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
description = "provides interface to ESDM RNG server"
keywords = ["rand", "random", "esdm", "rng"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true

[features]
default = []
privileged_tests = []

[dependencies]
rand_core = { version = "0.6.4", features = ["std"] }
libc = { version = "0.2.155" }
esdm-sys = { workspace = true }
regex = "1.10.5"

[dev-dependencies]
rand = "0.8.5"

[lints]
workspace = true
