[package]
name = "rand-esdm"
edition.workspace = true
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
description = "provides interface to ESDM RNG server"
keywords = ["rand", "random", "esdm", "rng"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true

[features]
default = []
privileged_tests = []

[dependencies]
rand_core = { version = "0.9.3", features = ["std"] }
libc = { version = "0.2.171" }
esdm-sys = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
rand = "0.9.0"

[lints]
workspace = true
