[package]
name = "rand-esdm"
edition.workspace = true
license = "MIT"
repository = "https://github.com/thillux/rand-esdm"
description = "provides interface to ESDM RNG server"
keywords = ["rand", "random", "esdm", "rng"]
categories = ["cryptography"]
version.workspace = true
authors.workspace = true

[features]
default = []
privileged_tests = []

[dependencies]
rand_core = { workspace = true }
libc = { workspace = true }
esdm-sys = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
